--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -96,6 +96,10 @@ body {
             height: 300px;
             left: 2rem;
         }
+
+        @media (min-width: 1200px) {
+            left: 6rem;
+        }
     }
 
     .center-grid {
@@ -105,7 +109,7 @@ body {
     }
 
     .big-title {
-        font-size: clamp(5rem, 30vw, 25rem);
+        font-size: clamp(5rem, 30vw, 17rem);
         background-color: $primary-blue;
         -webkit-background-clip: text;
         -moz-background-clip: text;
