--- a/src/layouts/head.html
+++ b/src/layouts/head.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{pageDescription}}">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
