--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -20,7 +20,7 @@
             z-index: 2;
         }
 
-        .hero-video {
+        .hero-img {
             position: absolute;
             width: 100%;
             height: 100%;
@@ -33,12 +33,16 @@
             z-index: 1;
             margin-top: 3rem;
 
+            &--mobile {
+                height: 270px;
+            }
+
             @media (min-width: 768px) {
                 justify-content: flex-end;
                 margin-top: 0;
             }
 
-            video,img {
+            img {
                 width: 80%;
 
                 @media (min-width: 768px) {
