--- a/src/assets/scss/pages/_press.scss
+++ b/src/assets/scss/pages/_press.scss
@@ -13,6 +13,10 @@
                 width: 100%;
                 object-fit: cover;
                 border-radius: 0;
+
+                &.img-p-left {
+                    object-position: left;
+                }
             }
 
             .card-body {
